<resources>
    <string name="app_name">EasyMovie</string>
    <string name="browse_title">Easy Movies</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch Movie</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_results">Search results for \'%1$s\'</string>
    <string name="no_search_results">No search results found for \'%1$s\'</string>


    <!-- Category Titles -->
    <string name="basic_preferences">Basic Preferences</string>
    <string name="widgets">Widgets</string>
    <string name="dialogs">Dialogs</string>
    <string name="advanced_attributes">Advanced Attributes</string>

    <!-- Basic Preferences -->
    <string name="title_basic_preference">Basic Preference</string>
    <string name="summary_basic_preference">This is a basic preference.</string>
    <string name="title_stylish_preference">Stylish Preference</string>
    <string name="summary_stylish_preference">This is a stylish preference.</string>
    <string name="title_icon_preference">Icon Preference</string>
    <string name="summary_icon_preference">This is an icon preference.</string>
    <string name="title_single_line_title_preference">Single Line Title Preference</string>
    <string name="summary_single_line_title_preference">This preference has a single line title.</string>

    <!-- Widgets -->
    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">This is a checkbox preference.</string>
    <string name="title_switch_preference">Switch Preference</string>
    <string name="summary_switch_preference">This is a switch preference.</string>
    <string name="title_dropdown_preference">Dropdown Preference</string>
    <string name="title_seekbar_preference">SeekBar Preference</string>

    <!-- Dialogs -->
    <string name="title_edittext_preference">EditText Preference</string>
    <string name="dialog_title_edittext_preference">Edit your text here</string>
    <string name="title_list_preference">List Preference</string>
    <string name="dialog_title_list_preference">Select an option</string>
    <string name="title_multi_list_preference">Multi-Select List Preference</string>
    <string name="summary_multi_list_preference">This is a multi-select list preference.</string>
    <string name="dialog_title_multi_list_preference">Select options</string>

    <!-- Advanced Attributes -->
    <string name="title_expandable_preference">Expandable Preference</string>
    <string name="summary_expandable_preference">This is an expandable preference.</string>
    <string name="title_intent_preference">Intent Preference</string>
    <string name="summary_intent_preference">This preference opens an intent.</string>
    <string name="title_parent_preference">Parent Preference</string>
    <string name="summary_parent_preference">This is a parent preference.</string>
    <string name="title_child_preference">Child Preference</string>
    <string name="summary_child_preference">This is a child preference dependent on parent.</string>
    <string name="title_toggle_summary_preference">Toggle Summary Preference</string>
    <string name="summary_on_toggle_summary_preference">This preference is ON.</string>
    <string name="summary_off_toggle_summary_preference">This preference is OFF.</string>
    <string name="title_copyable_preference">Copyable Preference</string>
    <string name="summary_copyable_preference">This is a copyable preference.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cast_image">TODO</string>

    <!-- Guided step fragment -->
    <!-- Dialog example -->
    <string name="dialog_example_title">Use Google\'s location service?</string>
    <string name="dialog_example_description">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="dialog_example_button_positive">Agree</string>
    <string name="dialog_example_button_negative">Disagree</string>
    <string name="dialog_example_button_toast_positive_clicked">\'Agree\' clicked.</string>
    <string name="dialog_example_button_toast_negative_clicked">\'Disagree\' clicked.</string>
    <string name="rent_options_title">Rent Options</string>
    <string name="rent_options_description">Select your rental option</string>
    <string name="rent_hd_price">$4.99 for HD supported device</string>
    <string name="rent_sd_price">$2.99 to watch in SD</string>
    <string name="enter_card_details">Enter your card details</string>
    <string name="rent_hd">$4.99 for HD supported device</string>
    <string name="rent_sd">$2.99 to watch in SD</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="payment_method_description">Select your payment method</string>
    <string name="select_card">Select Card</string>
    <string name="select_card_description">Choose your card or add a new one</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_new_card_title">Add a New Card</string>
    <string name="add_new_card_description">Enter your card details</string>
    <string name="enter_card_number">Card Number</string>
    <string name="select_expiry_date">Expiry Date</string>
    <string name="select_expiry_date_title">Select Expiry Date</string>
    <string name="select_expiry_date_description">Choose the card expiry date</string>
    <string name="browse">Browse</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="search_bar">Search</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="title">Resume</string>
    <string name="subtitle">S2 E2: Trick or Treat</string>
    <string name="overview">OVERVIEW</string>
    <string name="trailers_and_more">TRAILERS and MORE</string>
    <string name="when_a_young_boy_disappears_his_mother_a_police_chief_and_his_friends_must_confront_terrifying_forces_in_order_to_get_him_back">When a young boy disappears, his mother, a police chief, and his friends must confront terrifying forces in order to get him back.</string>
    <string name="starring_millie_bobby_brown_finn_wolfhard_winona_ryder">Starring: Millie Bobby Brown, Finn Wolfhard, Winona Ryder</string>
    <string name="trailers"><![CDATA[TRAILERS & MORE]]></string>
    <string name="date_aired">2018</string>
    <string name="vertical_bar">|</string>
    <string name="no_of_seasons">2 Seasons</string>
    <string name="title_series">Stranger Things</string>
    <string name="rated">16+</string>
    <string name="imdb_rating">9.0</string>
    <string name="episodes">EPISODES</string>
    <string name="more_like_this">MORE LIKE THIS</string>
    <string name="ep_description">When a young boy disappears, his mother, a police chief, and his friends must confront terrifying forces in order to get him back.</string>
    <string name="cast_crew">Millie Bobby Brown, Finn Wolfhard, Winona Ryder</string>
    <string name="created_by">The Duffer Brothers</string>
    <string name="netflix_originals">Netflix Originals</string>
    <string name="leanbackViewpager">LeanbackViewPager</string>
    <string name="leanbackTabLayout">Leanback Tab Layout</string>
    <string name="play_button">play_button</string>


</resources>