<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/details_background"
    android:layout_marginStart="0dp"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title and Info Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/netflix_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netflix_originals"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_series"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:drawableEnd="@drawable/ic_star"
                android:drawablePadding="10dp"
                android:text="@string/imdb_rating"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                tools:ignore="UseCompatTextViewDrawableXml" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableEnd="@drawable/vertical_bar"
                android:drawablePadding="10dp"
                android:text="@string/date_aired"
                android:textColor="@color/bar"
                android:textSize="14sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/seasons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/no_of_seasons"
                android:textColor="@color/bar"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vertical_bar"
                android:drawablePadding="10dp"
                android:text="@string/rated"
                android:textColor="@color/bar"
                android:textSize="14sp"
                tools:ignore="UseCompatTextViewDrawableXml" />
        </LinearLayout>


    </LinearLayout>

    <!-- Tabs Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.leanback.tab.LeanbackTabLayout
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leanbackTabLayout"
            app:tabIndicatorFullWidth="false"
            app:tabBackground="@color/transparent"
            app:tabIndicatorColor="@color/tabIndicatorColor" />

        <androidx.leanback.tab.LeanbackViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leanbackViewpager" />


    </LinearLayout>


</LinearLayout>
