<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/topp_bar"
    android:background="@color/details_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="start"
        android:src="@drawable/netflix" />

    <TextView
        android:id="@+id/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/browse"
        android:textColor="@color/bar"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginStart="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/bar"
            android:textSize="14sp"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="5dp"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/notifications"
        android:src="@drawable/ic_notification" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:focusable="true"
        android:padding="6dp"
        android:layout_marginEnd="2dp"
        android:focusableInTouchMode="true"
        android:background="@drawable/circular_background"
        android:contentDescription="@string/profile"
        android:src="@drawable/profile_pic" />
</LinearLayout>
