<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:id="@+id/left_part"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/details_background"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="30dp">

    <ImageView
        android:id="@+id/image_view_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/king_kong_vs_godzilla" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_overlay" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textFontWeight="600"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textFontWeight="700"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:progressTint="@color/progress_tint_color"
            android:progress="50" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:ellipsize="end"
            android:text="@string/ep_description"
            android:textColor="@color/bar"
            android:textSize="12sp" />
    </LinearLayout>

</FrameLayout>
